--- a/src/scss/icon.scss
+++ b/src/scss/icon.scss
@@ -1,7 +1,25 @@
+
+.icon-svg {
+	fill: currentColor;
+	&.icon-s {
+		width: 13px;
+		min-width: 13px;
+		height: 13px;
+	}
+	&.icon-m {
+		width: 24px;
+		min-width: 24px;
+		height: 24px;
+	}
+}
+
+
 .icon-common {
 	display: inline-block;
 	width: 22px;
+    min-width: 22px;
 	height: 22px;
+    min-height: 22px;
 	background-size: contain;
 }
 .icon-eye {
@@ -14,4 +32,16 @@
 
 .icon-update {
 	background-image: url("./resources/update.svg");
+}
+
+.icon-spy {
+	background-image: url("./resources/spy.png");
+}
+
+.icon-nen {
+	background-image: url("./resources/use_nen.png");
+}
+
+.icon-information {
+	background-image: url("./resources/information.svg");
 }
