--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -115,8 +115,20 @@ a {
     }
 }
 
-.thumbail-container {
+.thumbail-container, .medium-image-container {
     display: inline-block;
+    img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+}
+.medium-image-container {
+    width: 400px;
+    min-width: 400px;
+    height: 400px;
+}
+.thumbail-container {
     width: 50px;
     min-width: 50px;
     height: 50px;
@@ -146,10 +158,5 @@ a {
             background: rgba(255, 0, 0, 0.5);
             transform: rotate(45deg);
         }
-    }
-    img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
     }
 }
